# pure_pursuit_simulation

./: README.md
pure_pursuit/: CMakeLists.txt  package.xml
pure_pursuit/include/pure_pursuit/: cpprobotics_types.h  online_trajectory_publish.h  purepursuit.h
pure_pursuit/launch/: online_trajectory_publish.launch  pure_pursuit.launch
pure_pursuit/src/: online_trajectory_publish copy.cpp  online_trajectory_publish.cpp  purepursuit copy 2.cpp  purepursuit copy.cpp  purepursuit.cpp
